Allow to include uninitialized modules [Bug #18177]

The module that is about to be included is considered initialized.